# cotomata

./: .gitignore  README.md  modal_deploy.py  package.json
.github/workflows/: deploy.yml  lint.yml  (+1 more)
backend/: main.py  modal_deploy.py  package.json  pyproject.toml
backend/aact_openhands/: .env.example  .gitignore  README.md  pyproject.toml
backend/aact_openhands/.github/workflows/: publish.yml  python-lint.yml  python-tests.yml
backend/aact_openhands/aact_openhands/: app.py  openhands_node.py  run_tests.sh  utils.py
backend/aact_openhands/aact_openhands/tests/: test_app.py
backend/aact_openhands/examples/: openhands_node.toml
backend/aact_openhands/openhands/openhands/core/config/: app_config.py
backend/aact_openhands/openhands/openhands/runtime/impl/modal/: modal_runtime.py
backend/group_disscussion_case/: generate.py  group_agent.py  kaggle.toml
backend/interview_case/: ML_coding.toml  ML_theory.toml  README.md  agent_models.py  app.py  base_agent.py  behavioral.toml  cybersecurity.toml  debugging.toml  domain_specific.toml  generate.py  interview.toml  interview_agent.py  interview_agent_async.py  interview_agent_fc.py  interview_async.toml  optimization.toml  project_based.toml  system_design.toml  test_curl.sh
backend/interview_case/nodes/: chat_print_node.py  initial_message_node.py
backend/src/: server.js
codeconflict/: agent_conversation.py  manual.py  openai_agent.py
evaluation/: README.md  index.js  package.json
frontend/: .eslintrc.json  README.md  bun.lockb  config.ts  next.config.mjs  package-lock.json  package.json  server.js
(+74 files in other folders)
