[project]
name = "cotomata"
version = "0.0.1"
description = "A platform for simulating and evaluating cooperative AI agents for grounded mixed-objective interactions."
requires-python = ">=3.10, <3.13"
dependencies = [
    "rich>=13.6.0,<14.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "sotopia>=0.1.2",
    "python-dotenv",
    "aact"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
package-data = {"interview_case" = ["py.typed"]}

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
    "pydantic.v1.mypy"
]